--- a/public/assets/css/personal/dexy-new.css
+++ b/public/assets/css/personal/dexy-new.css
@@ -95,7 +95,7 @@
     border: 1px solid #383838;
     border-radius: 3px;
     -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
+    /* -webkit-border-radius: 3px; */
 }
 
 .footop {
