--- a/public/assets/css/personal/carousel.css
+++ b/public/assets/css/personal/carousel.css
@@ -30,8 +30,12 @@
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    margin-left: 300px;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    margin-left: -50px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
