--- a/public/assets/css/personal/carousel.css
+++ b/public/assets/css/personal/carousel.css
@@ -12,6 +12,12 @@
   display: none;
 }
 
+/* Hide the images by default */
+.mySlides2 {
+  display: none;
+}
+
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
