--- a/public/assets/css/personal/carousel.css
+++ b/public/assets/css/personal/carousel.css
@@ -8,6 +8,11 @@
 }
 
 /* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Hide the images by default */
 .mySlides2 {
   display: none;
 }
